// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema field generation 1`] = `
Object {
  "dbType": "string",
  "fillable": true,
  "htmlType": "number",
  "inForm": false,
  "inIndex": false,
  "inView": false,
  "name": "id",
  "primary": true,
  "searchable": false,
  "validations": "",
}
`;

exports[`schema field generation 2`] = `
Object {
  "dbType": "string",
  "fillable": true,
  "htmlType": "email",
  "inForm": false,
  "inIndex": false,
  "inView": false,
  "name": "email",
  "primary": false,
  "searchable": false,
  "validations": "",
}
`;

exports[`schema field generation 3`] = `
Object {
  "dbType": "string",
  "fillable": true,
  "htmlType": "text",
  "inForm": false,
  "inIndex": false,
  "inView": false,
  "name": "name",
  "primary": false,
  "searchable": false,
  "validations": "",
}
`;
